RESOLVED FIXED38012
REGRESSION: Ctrl- and Option- shortcuts get wrong keyCode on non-QWERTY keyboard
https://bugs.webkit.org/show_bug.cgi?id=38012
Summary REGRESSION: Ctrl- and Option- shortcuts get wrong keyCode on non-QWERTY keyboard
Alexey Proskuryakov
Reported 2010-04-22 16:13:24 PDT
E.g. Ctrl+A on AZERTY keyboard reports VK_Q keycode, because the physical key is the same as Q on QWERTY.
Attachments
proposed fix (1.91 KB, patch)
2010-04-22 16:15 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-04-22 16:15:04 PDT
Created attachment 54104 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-04-22 17:09:05 PDT
Note You need to log in before you can comment on or make changes to this bug.