        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=38012
        REGRESSION: Ctrl- and Option- shortcuts get wrong keyCode on non-QWERTY keyboard

        * platform/mac/KeyEventMac.mm: (WebCore::windowsKeyCodeForKeyEvent): Also look at unmodified
        characters, to avoid falling through to virtual key code lookup for Roman characters.



Canonical link: https://commits.webkit.org/49412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58132 268f45cc-cd09-0410-ab3c-d52691b4dbfc